# ComparIA

./: .dockerignore  .env.docs.example  .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOCAL_SETUP.md  Makefile  NOTES.md  README.md  already_visited.js  api_only.py  blacklist.py  controller.py  convert_models_extra_info.py  create_tables.sql  customdropdown_enhancement_plan.md  customerror.css  data_to_psql.py  demo.py  format.sh  google-api.py  google_creds.json.example  litellm_config.yml.dist  logs.py  main.py  migrate_15-11-2024.sql  mock_endpoints.py  model-info-file.json.dist  models-extra-info.json  models-extra-info.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  register-api-endpoint-file.json.dist  requirements-dev.txt  requirements.txt  run_local.sh  (+2 more)
.devin/: wiki.json
.github/workflows/: models-update.yml  rankings-update.yml
assets/: arena.js  bundle.tracing.replay.min.js  custom-arena.css  custom-site.css  custom.css  dark.css  dsfr-arena.css  dsfr.css  extra-icons.css
assets/dsfr/: dsfr.css
backend/: config.py  errors.py  logger.py  main.py  sentry.py  session.py
backend/arena/: conversation.py  litellm.py  models.py  persistence.py  reveal.py  router.py  session.py  streaming.py  utils.py
backend/language_models/: data.py  models.py  router.py  utils.py
backend/llms/: data.py  models.py  router.py  utils.py
backend/models/: data.py  models.py  router.py  utils.py
backend/utils/: countries.py  user.py
custom_components/custom-chatbot/: pyproject.toml
custom_components/customchatbot/: README.md  package-lock.json  package.json  pyproject.toml
custom_components/customdropdown/: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
custom_components/customradiocard/: README.md  pyproject.toml
custom_components/customslider/: README.md  package-lock.json  pyproject.toml
custom_components/customtextbox/: README.md  pyproject.toml
custom_components/frbutton/: README.md
custom_components/frinput/: README.md  pyproject.toml
custom_components/frslider/: README.md  package-lock.json  package.json  pyproject.toml
custom_components/input/: README.md  pyproject.toml
docker/: .env.dev  .env.dist  .env.example  Dockerfile  Dockerfile-fastapi  Dockerfile-front  Dockerfile-sveltekit  Dockerfile.front  app.compose.override.yml  build-and-push-to-harbor.sh  build-and-push-to-kind.sh  db-prd-local.compose.yml  docker-bake.yml  docker-compose.full.yml  docker-compose.yml  generate-init-db.sh  list-harbor-tags.sh  model-info-file.json.dist  register-api-endpoint-file.json.dist  requirements.txt  restore-backup.sh
e2e/: example.spec.ts
fastchat/: constants.py
fastchat/model/: __init__.py  model_adapter.py  model_adapter_light.py
fastchat/serve/: gradio_block_arena_anony.py  gradio_block_arena_anony_languia.py  gradio_block_arena_named.py  gradio_block_arena_vision_anony.py  gradio_block_arena_vision_named.py  gradio_web_server.py  (+2 more)
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  uno.config.ts  vite.config.ts
languia/: api_provider.py  block_arena.py  block_conversation.py  config.py  controllers.py  conversation.py  docs_auth.py  gradio_web_server.py  langfuse.py  listeners.py  litellm.py  logs.py  models-extra-info.csv  models.py  profile.py  reveal.py  schemas.py  session.py  timeout.py  utils.py
locales/: en.json  fr.json
schemas/: conversations.sql  counter.sql  questions.sql  votes.sql
templates/: 404.html  50x.html  about.html  accessibility.html  base.html  bnf.html  datasets.html  docs_connect.html  docs_documents.html  docs_documents_client.html  faq-content-short.html  faq-content.html  faq.html  feedback.html  footer.html  form.html  gauge.html  header-arena.html  header-chat.html  header-main.html  header.html  index.html  legal.html  modal_model.html  model-modal.html  models.html  models_errors.html  outages.html  partners.html  policy.html  reveal.html  share.html  start-screen.html  tos.html  unavailable_models.html  welcome-modal.html
tests/: ecologits.py  locustfile.py  test.py
themes/: dsfr.py  theme.json
utils/: Dockerfile  add_question_id_to_reactions.sql  add_token_count.py  add_token_ecologits_count.py  anon.py  async_export_dataset.py  calculate_wh_per_million_token.py  calculate_wh_per_token.py  commit_dataset.py  consolidate.py  conversations.sql  conversations_from_logs.sql  detoxify.py  export.py  export_danish_dataset.py  export_dataset.py  geoip.py  import_topics.py  ip_map.py  ip_map.sql  logger.py  logs.sql  merge_models.sql  peren.ipynb  pii_anonymisation.py  pii_anonymisation_db.py  pii_anonymisation_vertex.py  pii_detection_db.py  pii_detection_from_file.py  pii_google_dlp.py  presidio.py  presido_Dockerfile  questions.sql  questions_only.sql  reactions.sql  results.sql  topics.py  topics_pii.py  topics_vertex.py  utils.py  (+2 more)
utils/ranking_methods/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  export.py  pyproject.toml  renovate.json  setup.cfg
utils/ranking_methods/.reuse/: dep5
utils/ranking_methods/graph-frontend/: 450051d7f1174df8@254.js  845501cdfbbf1a83@462.js  README.md  index.html  index.js  inspector.css  package-lock.json  package.json  runtime.js
utils/ranking_methods/graph-frontend/files/: comparIA_graph.json  rencontres_comparIA_graph_reduced_all_july.json
utils/ranking_methods/notebooks/: comparia.ipynb  d3graph.html  frugal.ipynb  graph.ipynb  pipeline.ipynb  rankers.ipynb  topic_model.ipynb  utils_graph_d3.py
utils/ranking_methods/src/rank_comparia/: __init__.py  data_transformation.py  elo.py  export.py  frugality.py  maximum_likelihood.py  pipeline.py  plot.py  preferences.py  ranker.py  utils.py  utils_graph_d3.py
utils/ranking_methods/tests/: __init__.py  conftest.py  test_data_transformation.py  test_elo.py  test_frugality.py  test_graph.py  test_maximum_likelihood.py  test_pipeline.py  test_utils.py
venv_gradio/: pyvenv.cfg
(+439 files in other folders)
