[project]
name = "languia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecologits==0.8.2",
    "gradio==5.48.0",
    "litellm==1.77.5",
    "langfuse>=3.6.0",
    "fastapi>=0.118.0",
    "google-auth>=2.40.1",
    "google-cloud-aiplatform>=1.93.0",
    "huggingface-hub>=1.0.1",
    "json5>=0.12.0",
    "openai>=2.0.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "sentry-sdk>=2.28.0",
    "tiktoken>=0.9.0",
    "redis[hiredis]>=6.4.0",
    "markdown>=3.9",
    "python-slugify>=8.0.4",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.43",
    "polars>=1.34.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["languia*", "utils*"]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
