[project]
name = "languia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecologits==0.8.2",
    "litellm==1.77.5",
    "langfuse>=3.6.0",
    "fastapi>=0.118.0",
    "google-auth>=2.40.1",
    "google-cloud-aiplatform>=1.93.0",
    "huggingface-hub>=1.0.1",
    "json5>=0.12.0",
    "openai>=2.0.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "sentry-sdk>=2.28.0",
    "tiktoken>=0.9.0",
    "redis[hiredis]>=6.4.0",
    "markdown>=3.9",
    "python-slugify>=8.0.4",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.43",
    "polars>=1.34.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "utils*"]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "types-psycopg2>=2.9.21.20251012",
    "types-requests>=2.32.4.20260107",
]
