[project]
name = "languia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecologits==0.8.2",
    "fastapi>=0.128.0",
    "json5>=0.13.0",
    "litellm==1.77.5",
    "markdown>=3.10.1",
    "numpy>=2.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis[hiredis]>=7.1.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentry-sdk>=2.50.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
data = [
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
]
dev = [
    "autoflake>=2.3.1",
    "black>=26.1.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "types-markdown>=3.10.0.20251106",
    "types-psycopg2>=2.9.21.20251012",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
exclude = ["utils/ranking_methods"]
exclude_gitignore = true
check_untyped_defs = true
# disallow_untyped_defs = true

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
exclude= ["./utils/ranking_methods"]

[tool.isort]
profile = "black"
extend_skip = ["utils/ranking_methods"]

[tool.black]
extend-exclude = "utils/ranking_methods"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "utils*"]
